fpp_parser/src/tests/embedded-tab.ref.txt
error: syntax error
 --> [ local path prefix ]/embedded-tab.fpp:0:1
  |
0 |     
  | ^^^^ invalid character '\t'

